objects/Escalation__c.object
<CustomObject>
    <description>This object is used in the Gecko Escalation project.</description>
    <fields>
        <fullName>Geck_ID__c</fullName>
        <label>Escalation ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geck_URL__c</fullName>
        <label>Escalation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Investigator__c</fullName>
        <label>Investigator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Under investigation</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Waiting for Asker/TS</fullName>
                </value>
                <value>
                    <fullName>Investigation Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_of_last_Answer__c</fullName>
        <label>Time of last Answer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_of_last_Comment__c</fullName>
        <label>Time of last Comment</label>
        <type>DateTime</type>
    </fields>
    <label>Escalation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Case__c</columns>
        <columns>Status__c</columns>
        <columns>Geck_ID__c</columns>
        <columns>Geck_URL__c</columns>
        <columns>Investigator__c</columns>
        <columns>Time_of_last_Answer__c</columns>
        <columns>Time_of_last_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>